--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.28",
     "storybook": "7.4.0",
+    "storybook-react-i18next": "^2.0.9",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
