--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "r3f-dom-masonry",
-  "private": true,
+  "private": false,
+    "author": "ShoOsaka",
+  "license": "MIT",
+  "description": "ReactThreeFiber + three-dom-alignment + Masonry",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/foasho/r3f-dom-masonry.git"
+  },
   "version": "0.0.0",
   "type": "module",
   "scripts": {
