--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,29 @@ node_modules
 storybook-static
 build-storybook.log
 .env
+dist
 
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+*.log
+*.log.*
 
 
