update: storybook build

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false --strict --jsx react",
     "typegen": "tsc",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "storybook:build": "build-storybook -c .storybook -o ./static/storybook"
   },
   "dependencies": {
     "@react-three/drei": "^9.80.1",
