--- a/package.json
+++ b/package.json
@@ -86,6 +86,10 @@
     "vite": "^4.4.5",
     "vite-plugin-glsl": "^1.1.2"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "bugs": {
     "url": "https://github.com/foasho/r3f-dom-masonry/issues"
   },
